[metadata]
name = hledger-rules
version = 0.1.0
author = Alex Beimler
author_email = alex-beimler@web.de
description = Generate ledger rules from yaml and then generate journals from csv
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Natural Language :: German
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Office/Business :: Financial :: Accounting

[options]
packages = pymledger
python_requires = >= 3.6
setup_requires = setuptools
install_requires =
    pyyaml>=6.0
    colorama>=0.4
    docopt>=0.6
    pandas>=1.4
    plotly>=5.6
    kaleido>=0.2

[options.extras_require]
test =
    coverage>=4.5.1
    pytest>=7.0.1
dev =
    %(test)s
    pylint>=1.8.3
    pycodestyle>=2.5.0
    bump2version>=0.5.11
    twine>=3.1.1

[options.package_data]
pymledger = py.typed, VERSION, *.pyi

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[options.entry_points]
console_scripts =
    pymledger = pymledger.main:main